Added support for resource tables to DatabaseSynchronizer